--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,4 +1,4 @@
-.flex-container {
+/*.flex-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,21 +7,20 @@
   margin-left: auto;
   margin-right: auto;
   padding: 1rem;
-}
+}*/
 
-.image {
+/*.image {
   display: flex;
   align-items: center;
   padding: 1rem;
-}
+}*/
 
-.content {
+/*.content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /*margin: 4rem;*/
   padding: 2rem;
   flex-wrap: wrap;
   color: white;
-}
+}*/
