--- a/src/components/Navigation/nav.css
+++ b/src/components/Navigation/nav.css
@@ -1,4 +1,4 @@
-.nav-container {
+/* .nav-container {
   display: flex;
   flex-direction: column;
   position: sticky;
@@ -9,27 +9,28 @@
   background-color: rgba(25, 37, 45, 0.707);
   color: white;
   box-shadow: 4px 1px 4px rgba(117, 129, 147, 0.569);
-}
+} */
 
-.nav-title-section {
+/* .nav-title-section {
   padding-right: 1rem;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   border-bottom: 2px solid slategray;
 }
+*/
 
-.nav-title-section > p {
+/* .nav-title-section > p {
   color: rgb(99, 197, 189);
-}
+} */
 
-.nav-list {
+/*.nav-list {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
+}*/
 
-.nav-list > button {
+/*.nav-list > button {
   display: flex;
   align-items: center;
   gap: 7px;
@@ -44,9 +45,9 @@
 }
 
 .nav-list > button:hover {
-  background-color: slategray;
+  background-color: rgb(112, 128, 144);
   cursor: pointer;
   transition: 300ms;
   font-size: 1.1rem;
   text-decoration: overline;
-}
+}*/
