--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,23 +1,22 @@
-.footer-container {
+/*.footer-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  /*position: sticky;*/
   width: 100%;
   bottom: 0px;
   background-color: rgba(25, 37, 45, 0.707);
   border-top: 2px solid slategray;
-}
+}*/
 
-.icon-list {
+/*.icon-list {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
   padding: 0.5rem;
-}
+}*/
 
-.email {
+/*.email {
   color: white;
   font-size: 1.5rem;
 }
@@ -26,26 +25,26 @@
   color: rgb(78, 156, 117);
   transition: 200ms;
   font-size: 3rem;
-}
+}*/
 
-.icon-linkedin {
+/*.icon-linkedin {
   font-size: 1.5rem;
   color: white;
 }
 
 .icon-linkedin:hover {
-  color: #0077b5;
+  color: rgb(0, 119, 181);
   transition: 200ms;
   font-size: 3rem;
-}
+}*/
 
-.icon-github {
+/*.icon-github {
   font-size: 1.5rem;
   color: white;
 }
 
 .icon-github:hover {
-  color: #6e5494;
+  color: rgb(110, 84, 148);
   transition: 200ms;
   font-size: 3rem;
-}
+}*/
