--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-* {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -6,4 +10,5 @@
 body {
   margin: 0;
   background-color: rgba(10, 11, 16, 0.897);
-}
+} 
+*/
